--- a/HostmeTagHandler.csproj
+++ b/HostmeTagHandler.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
+    <PackageReference Include="Azure.AI.Translation.Text" Version="1.0.0" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.19.0" />
     <PackageReference Include="Microsoft.Azure.Amqp" Version="2.6.11" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
