--- a/HostmeTagHandler.csproj
+++ b/HostmeTagHandler.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Azure.AI.Translation.Text" Version="1.0.0" />
     <PackageReference Include="Azure.Core" Version="1.46.1" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.19.0" />
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Azure.Amqp" Version="2.6.11" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
